Feature/cb 25 (#31)